@@ -9,7 +9,6 @@ TMPDIR/LIBDIR/libm.a LIBDIR
 TMPDIR/LIBDIR/libm-*.a LIBDIR
 TMPDIR/LIBDIR/libmcheck.a LIBDIR
 TMPDIR/LIBDIR/libmvec.a LIBDIR
-TMPDIR/LIBDIR/libnsl.a LIBDIR
 TMPDIR/LIBDIR/libpthread.a LIBDIR
 TMPDIR/LIBDIR/libresolv.a LIBDIR
 TMPDIR/LIBDIR/librpcsvc.a LIBDIR
