@@ -9,7 +9,6 @@ TMPDIR/LIBDIR/libhurduser.a LIBDIR
 TMPDIR/LIBDIR/libm.a LIBDIR
 TMPDIR/LIBDIR/libmachuser.a LIBDIR
 TMPDIR/LIBDIR/libmcheck.a LIBDIR
-TMPDIR/LIBDIR/libnsl.a LIBDIR
 TMPDIR/LIBDIR/libpthread.a LIBDIR
 TMPDIR/LIBDIR/libpthread2.a LIBDIR
 TMPDIR/LIBDIR/libresolv.a LIBDIR
