@@ -35,10 +35,6 @@ libnss_files.so.2 #PACKAGE# #MINVER#
 #include "symbols.wildcards"
 libnss_hesiod.so.2 #PACKAGE# #MINVER#
 #include "symbols.wildcards"
-libnss_nis.so.2 #PACKAGE# #MINVER#
-#include "symbols.wildcards"
-libnss_nisplus.so.2 #PACKAGE# #MINVER#
-#include "symbols.wildcards"
 libpcprofile.so #PACKAGE# #MINVER#
  __cyg_profile_func_enter@Base 2.3.6
  __cyg_profile_func_exit@Base 2.3.6
