@@ -29,5 +29,3 @@ libnss_files.so.2 #PACKAGE# (>= 2.11), #PACKAGE# #MINVER#
 #include "symbols.wildcards"
 libnss_hesiod.so.2 #PACKAGE# (>= 2.11), #PACKAGE# #MINVER#
 #include "symbols.wildcards"
-libnss_nis.so.2 #PACKAGE# (>= 2.11), #PACKAGE# #MINVER#
-#include "symbols.wildcards"
