@@ -28,10 +28,6 @@ libnss_files.so.2 #PACKAGE# (>= 2.6), #PACKAGE# #MINVER#
 #include "symbols.wildcards"
 libnss_hesiod.so.2 #PACKAGE# (>= 2.6), #PACKAGE# #MINVER#
 #include "symbols.wildcards"
-libnss_nis.so.2 #PACKAGE# (>= 2.6), #PACKAGE# #MINVER#
-#include "symbols.wildcards"
-libnss_nisplus.so.2 #PACKAGE# (>= 2.6), #PACKAGE# #MINVER#
-#include "symbols.wildcards"
 libpcprofile.so #PACKAGE# (>= 2.6), #PACKAGE# #MINVER#
 #include "symbols.wildcards"
 libresolv.so.2 #PACKAGE# (>= 2.6), #PACKAGE# #MINVER#
